--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,6 @@ langchain==0.3.26
 langgraph==0.5.1
 ddgs==9.0.0
 pydantic==2.11.7
-python-multipart==0.0.18 
+python-multipart==0.0.18
+pytest==8.3.4
+pytest-asyncio==0.25.0 
